272 - Fix tests