@@ -34,6 +34,7 @@ import com.bytechef.category.service.CategoryService;
 import com.bytechef.helios.project.web.rest.model.ProjectModel;
 import com.bytechef.helios.project.web.rest.model.CreateProjectWorkflowRequestModel;
 import com.bytechef.helios.project.web.rest.model.UpdateTagsRequestModel;
+import com.bytechef.hermes.workflow.WorkflowDTO;
 import com.bytechef.tag.domain.Tag;
 import com.bytechef.tag.web.rest.model.TagModel;
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
@@ -48,6 +49,7 @@ import org.springframework.http.MediaType;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.web.reactive.server.WebTestClient;
 
+import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
@@ -121,7 +123,8 @@ public class ProjectControllerIntTest {
         try {
             Workflow workflow = new Workflow("{}", Workflow.Format.JSON, "workflow1", Map.of());
 
-            when(projectFacade.getProjectWorkflows(1L)).thenReturn(List.of(workflow));
+            when(projectFacade.getProjectWorkflows(1L)).thenReturn(
+                List.of(new WorkflowDTO(Collections.emptyList(), workflow)));
 
             this.webTestClient
                 .get()
@@ -240,9 +243,11 @@ public class ProjectControllerIntTest {
         CreateProjectWorkflowRequestModel createProjectWorkflowRequestModel = new CreateProjectWorkflowRequestModel()
             .label("workflowLabel")
             .description("workflowDescription");
-        Workflow workflow = new Workflow(
-            "{\"description\": \"My description\", \"label\": \"New Workflow\", \"tasks\": []}", "id",
-            Workflow.Format.JSON);
+        WorkflowDTO workflow = new WorkflowDTO(
+            Collections.emptyList(),
+            new Workflow(
+                "{\"description\": \"My description\", \"label\": \"New Workflow\", \"tasks\": []}", "id",
+                Workflow.Format.JSON.getId()));
 
         when(projectFacade.addWorkflow(anyLong(), any(), any(), any()))
             .thenReturn(workflow);
@@ -261,7 +266,7 @@ public class ProjectControllerIntTest {
                 .jsonPath("$.description")
                 .isEqualTo("My description")
                 .jsonPath("$.id")
-                .isEqualTo(workflow.getId())
+                .isEqualTo(workflow.id())
                 .jsonPath("$.label")
                 .isEqualTo("New Workflow");
         } catch (Exception exception) {
@@ -271,8 +276,8 @@ public class ProjectControllerIntTest {
         ArgumentCaptor<String> nameArgumentCaptor = ArgumentCaptor.forClass(String.class);
         ArgumentCaptor<String> descriptionArgumentCaptor = ArgumentCaptor.forClass(String.class);
 
-        verify(projectFacade).addWorkflow(anyLong(), nameArgumentCaptor.capture(),
-            descriptionArgumentCaptor.capture(), isNull());
+        verify(projectFacade).addWorkflow(
+            anyLong(), nameArgumentCaptor.capture(), descriptionArgumentCaptor.capture(), isNull());
 
         Assertions.assertEquals("workflowLabel", nameArgumentCaptor.getValue());
         Assertions.assertEquals("workflowDescription", descriptionArgumentCaptor.getValue());
